--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@ FLASK_ENV=development
 FLASK_DEBUG=1  # Set to 0 in production
 
 # Database Configuration
-DATABASE_URL=sqlite:///app.db  # Replace with your database URL, e.g., postgresql://user:password@localhost/dbname
+DATABASE_URL=sqlite:///farmeye.db  
+DEV_DATABASE_URL=sqlite:///farmeye.db
 
 # Secret Key for Flask Application
 SECRET_KEY=farmeye  
