--- a/alembic.ini
+++ b/alembic.ini
@@ -1,18 +1,21 @@
 # A generic, single database configuration.
 
 [alembic]
-sqlalchemy.url = sqlite:///C:/Users/PC/Downloads/godfrey/farmeye_solution_app/farmeye.db
+script_location = migrations
+sqlalchemy.url = sqlite:///./farmeye.db
+
+
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
 
-# set to 'true' to run the environment during
+# set to 'true' to run the environment during       
 # the 'revision' command, regardless of autogenerate
 # revision_environment = false
 
 
 # Logging configuration
 [loggers]
-keys = root,sqlalchemy,alembic,flask_migrate
+keys = root,sqlalchemy,alembic,flask_migrate        
 
 [handlers]
 keys = console
