--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -1,7 +1,6 @@
 # A generic, single database configuration.
 
 [alembic]
-sqlalchemy.url = sqlite:///C:/Users/PC/Downloads/godfrey/farmeye_solution_app/farmeye.db
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
 
@@ -9,6 +8,10 @@ sqlalchemy.url = sqlite:///C:/Users/PC/Downloads/godfrey/farmeye_solution_app/fa
 # the 'revision' command, regardless of autogenerate
 # revision_environment = false
 
+# Database configuration
+[database]
+# SQLite database URL example (use an absolute or relative file path)
+url = sqlite:///database.db
 
 # Logging configuration
 [loggers]
@@ -26,18 +29,18 @@ handlers = console
 qualname =
 
 [logger_sqlalchemy]
-level = WARN
-handlers =
+level = DEBUG
+handlers = console
 qualname = sqlalchemy.engine
 
 [logger_alembic]
 level = INFO
-handlers =
+handlers = console
 qualname = alembic
 
 [logger_flask_migrate]
 level = INFO
-handlers =
+handlers = console
 qualname = flask_migrate
 
 [handler_console]
@@ -47,5 +50,5 @@ level = NOTSET
 formatter = generic
 
 [formatter_generic]
-format = %(levelname)-5.5s [%(name)s] %(message)s
-datefmt = %H:%M:%S
+format = %(asctime)s - %(levelname)-5.5s [%(name)s] %(message)s
+datefmt = %Y-%m-%d %H:%M:%S
