--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -1,6 +1,8 @@
 # A generic, single database configuration.
 
 [alembic]
+sqlalchemy.url = sqlite:///farmeye.db
+script_location = migrations
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
 
@@ -8,10 +10,6 @@
 # the 'revision' command, regardless of autogenerate
 # revision_environment = false
 
-# Database configuration
-[database]
-# SQLite database URL example (use an absolute or relative file path)
-url = sqlite:///database.db
 
 # Logging configuration
 [loggers]
@@ -29,18 +27,18 @@ handlers = console
 qualname =
 
 [logger_sqlalchemy]
-level = DEBUG
-handlers = console
+level = WARN
+handlers =
 qualname = sqlalchemy.engine
 
 [logger_alembic]
 level = INFO
-handlers = console
+handlers =
 qualname = alembic
 
 [logger_flask_migrate]
 level = INFO
-handlers = console
+handlers =
 qualname = flask_migrate
 
 [handler_console]
@@ -50,5 +48,5 @@ level = NOTSET
 formatter = generic
 
 [formatter_generic]
-format = %(asctime)s - %(levelname)-5.5s [%(name)s] %(message)s
-datefmt = %Y-%m-%d %H:%M:%S
+format = %(levelname)-5.5s [%(name)s] %(message)s
+datefmt = %H:%M:%S
