--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -1,6 +1,11 @@
 # A generic, single database configuration.
 
 [alembic]
+# Path to migration scripts
+script_location = migrations
+
+# Database URL (can also be overridden with the --url flag or by env var)
+sqlalchemy.url = sqlite:///farmeye.db
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
 
