--- a/.env
+++ b/.env
@@ -29,4 +29,5 @@ MAX_CONTENT_LENGTH=16 * 1024 * 1024  # Maximum file upload size (16MB)
 # Example External API Keys (if applicable)
 GOOGLE_API_KEY=your_google_api_key_here
 OPENWEATHER_API_KEY=9ec417826bab17ebcc02904f96c4f776
+OPENAI_API_KEY=""
 
