feat: improve UI elements and enable code completion
Enable Codium code completion in VS Code settings, add title attribute to time range selector for better accessibility, and initialize schedule template with basic calendar structure.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
         "**/*.csproj": true,
         "**/bin": true,
         "**/obj": true
-    }
+    },
+    "codium.codeCompletion.enable": true
 }
